--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"express-async-handler": "^1.2.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.9.0",
+		"cookie-parser": "^1.4.6",
 		"slugify": "^1.6.5"
 	},
 	"devDependencies": {
