--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"colors": "^1.4.0",
-		"cors": "^2.8.5",
 		"concurrently": "^7.6.0",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"express-async-handler": "^1.2.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.9.0",
-		"cookie-parser": "^1.4.6",
+		"react-to-print": "^2.14.12",
 		"slugify": "^1.6.5"
 	},
 	"devDependencies": {
