--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,10 @@
 	"proxy": "http://localhost:5000",
 	"private": true,
 	"dependencies": {
+		"@fortawesome/fontawesome": "^1.1.8",
+		"@fortawesome/fontawesome-svg-core": "^6.3.0",
+		"@fortawesome/free-solid-svg-icons": "^6.3.0",
+		"@fortawesome/react-fontawesome": "^0.2.0",
 		"@reduxjs/toolkit": "^1.9.2",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
@@ -14,6 +18,7 @@
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.8.0",
 		"react-scripts": "5.0.1",
+		"react-simple-star-rating": "^5.1.7",
 		"react-toastify": "^9.1.1",
 		"redux": "^4.2.1",
 		"web-vitals": "^2.1.4"
