--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
+		"bootstrap-icons": "^1.10.3",
 		"colors": "^1.4.0",
 		"concurrently": "^7.6.0",
 		"cookie-parser": "^1.4.6",
@@ -20,12 +21,14 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"express-async-handler": "^1.2.0",
+		"font-awesome": "^4.7.0",
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^6.9.0",
 		"react-to-print": "^2.14.12",
 		"slugify": "^1.6.5"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.20"
+		"nodemon": "^2.0.20",
+		"tailwindcss": "^3.2.7"
 	}
 }
