--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,12 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
 		"axios": "^1.3.2",
+		"js-cookie": "^3.0.1",
+		"jwt-decode": "^3.1.2",
+		"phosphor-react": "^1.4.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^4.8.0",
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.8.0",
 		"react-scripts": "5.0.1",
