--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
 		"axios": "^1.3.2",
+		"bootstrap-icons": "^1.10.5",
 		"js-cookie": "^3.0.1",
 		"jwt-decode": "^3.1.2",
 		"phosphor-react": "^1.4.1",
