--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "frontend",
 	"version": "0.1.0",
-	"proxy": "http://localhost:5000",
+	"proxy": "http://localhost:5000/",
 	"private": true,
 	"dependencies": {
 		"@fortawesome/fontawesome": "^1.1.8",
@@ -29,7 +29,7 @@
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": " react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
