--- a/backend/configs/.env
+++ b/backend/configs/.env
@@ -2,7 +2,7 @@ NODE_ENV= development
 PORT=5000	
 
 # Mogoose configs
-MONGO_URI = mongodb+srv://mycula:1Samsung95@cluster0.giv7z.mongodb.net/alcrroDB?retryWrites=true&w=majority
+MONGO_URI = "mongodb+srv://mycula:1Samsung95@cluster0.giv7z.mongodb.net/alcrroDB?retryWrites=true&w=majority"
 
 JWT_SECRET = GSRGWSERGFWSEFFFEASWFSZGW34T43656363465434R
 JWT_EXPIRE=1h
